Use App instead of Cons as constructor for term constructor application
Cons conflicts with the constructor for lists (this should result in a better error message from Spoofax)

--- a/syntax/ds.tmpl
+++ b/syntax/ds.tmpl
@@ -21,7 +21,7 @@ templates
 
   Term.Var    = <<ID>>
   Term.String = <<STRING>>
-  Term.Cons   = <<ID>(<Term*; separator=",">)>
+  Term.App    = <<ID>(<Term*; separator=",">)>
   
 templates
 
