Added support for automatic generation of patience rules via strictness annotations.

--- a/syntax/ds.tmpl
+++ b/syntax/ds.tmpl
@@ -8,6 +8,8 @@ templates // rules
       [Rule*; separator="\n\n"]
   ]
   
+  Rule.Strict = [strict [ID] [INT]/[INT]]
+  
   Rule.Axiom = [[Formula]]
   
   Rule.Rule = [
