Added ability to specify multiple strict positions of a construct in a single declaration.

--- a/syntax/ds.tmpl
+++ b/syntax/ds.tmpl
@@ -8,7 +8,7 @@ templates // rules
       [Rule*; separator="\n\n"]
   ]
   
-  Rule.Strict = [strict [ID] [INT]/[INT]]
+  Rule.Strict = [strict [ID] [INT+; separator=","]/[INT]]
   
   Rule.Axiom = [[Formula]]
   
