--- a/syntax/ds.tmpl
+++ b/syntax/ds.tmpl
@@ -9,7 +9,8 @@ templates // rules
   ]
   
   Rule.Strict = [strict [ID] [INT+; separator=","]/[INT]]
-  
+  Rule.Seqstrict = [seqstrict [ID] [INT+; separator=","]/[INT]]
+    
   Rule.Axiom = [[Formula]]
   
   Rule.Rule = [
