Added 'value(x)' as syntactic sugar for 'IsValue(x) = True()'.

--- a/syntax/ds.tmpl
+++ b/syntax/ds.tmpl
@@ -25,6 +25,7 @@ templates // formulas
 
   Formula.TermEq = [[Term] = [Term]]
   Formula.Relation = [[Reads][Source] [Rel] [Target]]
+  Formula.IsValue = [value([Term])]
   
   Reads.NoReads = []
   Reads.Reads = [[LabelComp+; separator=", "] |- ]
