1. Reused copy-comp instead of repeating it in a few places. 2. Fixed spelling error (premise/premisse). 3. extract-components only works if extract-Xables are called first. So, I added extract-Xables to the beginning of extract-components, the idea is then that the outside world (explicate, generate) gets the component information by calling just extract-components. 4. Removed Premise.Formula chain production, making ASTs more symmetric in premise / conclusion. 5. Added unstrict-rules as preprocessing step to refocusing, factorisation and explication.

--- a/syntax/ds.tmpl
+++ b/syntax/ds.tmpl
@@ -14,13 +14,11 @@ templates // rules
   Rule.Axiom = [[Formula]]
   
   Rule.Rule = [
-    [Premise+; separator=",\n"]
+    [Formula+; separator=",\n"]
     [INFER]
     [Formula]
   ]
-  
-  Premise.Formula = [[Formula]]
-  
+   
 templates // formulas
 
   Formula.TermEq = [[Term] = [Term]]
